Bugfix: Modal close button behind CardHeader

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -167,6 +167,14 @@
     @apply rounded-lg border-2 border-foreground/15 bg-background/80 text-foreground shadow-xl shadow-accent/20 backdrop-blur-md @md:rounded-2xl;
   }
 
+  [data-inertiaui-modal-id] .im-close-button {
+    @apply relative z-10 p-1 rounded-full hover:text-text active:scale-95 transition-transform hover:bg-error-subtle/50;
+  }
+
+  [data-inertiaui-modal-id] .im-close-button svg {
+    @apply cursor-pointer;
+  }
+
   [data-inertiaui-modal-id] .modalPanel.close-left > *:has(> .im-close-button) {
     @apply right-auto left-0 pr-0 pl-3;
   }
